# solstreams

./: .gitignore  Anchor.toml  README.md  TECH_SPEC.md  THIS_IS_A_TEST_KEY.json  jest.config.ts  justfile  package.json  pnpm-lock.yaml  tsconfig.json
.github/actions/anchor-install/: action.yml
.github/actions/install/: action.yml
.github/actions/npm-install/: action.yml
.github/actions/publish/: action.yml
.github/workflows/: build.yaml  publish.yaml
programs/solstreams/: Cargo.toml
programs/solstreams/src/: lib.rs
sdk/: CHANGELOG.md  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json  tsconfig.tsbuildinfo
sdk/examples/: index.ts
sdk/src/: index.ts
sdk/src/idl/: solstreams.ts
tests/: event.spec.ts  event.ts
